--- a/pause-urbaine-website/layouts/partials/location-card.html
+++ b/pause-urbaine-website/layouts/partials/location-card.html
@@ -1,6 +1,6 @@
 {{- /* Location card partial - displays detailed location information */ -}}
 {{- $location := .location -}}
-{{- $lang := .Site.Language.Lang -}}
+{{- $lang := site.Language.Lang -}}
 
 <div class="location-card">
   <h3 class="location-card__title">
